[tool.poetry]
name = "composetest"
version = "0.1.0"
description = "a simple docker networking test"
authors = ["quiquepaz <quiquepaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
